# iblai-app-cli

./: .env.example  .gitignore  BRAND.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  Makefile  README.md  SIMPLIFICATION.md  pyproject.toml  pytest.ini
.iblai/: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini
.iblai/docs/: build-deps-archlinux.md  build-deps-ubuntu.md
.iblai/iblai/: __init__.py  ai_helper.py  cli.py  config.py  gallery.py  next_config_patcher.py  package_manager.py  updater.py
.iblai/iblai/commands/: add.py  builds.py  config.py  deploy.py  startapp.py  tauri.py  update_gallery.py
.iblai/iblai/generators/: __init__.py  add_account.py  add_analytics.py  add_auth.py  add_builds.py  add_chat.py  add_homepage.py  add_mcp.py  add_notifications.py  add_profile.py  add_tauri.py  agent.py  base.py  base_app.py
.iblai/iblai/templates/add/account/: account-page.tsx.j2
.iblai/iblai/templates/add/analytics/: analytics-page.tsx.j2
.iblai/iblai/templates/add/auth/: auth-utils.ts.j2  config.ts.j2  iblai-providers.tsx.j2  iblai-styles.css.j2  sso-login-complete-page.tsx.j2  tenant.ts.j2
.iblai/iblai/templates/add/chat/: chat-widget.tsx.j2
.iblai/iblai/templates/add/notifications/: notification-bell.tsx.j2
.iblai/iblai/templates/add/profile/: profile-dropdown.tsx.j2
.iblai/iblai/templates/agent/: .env.example.j2  package.json.j2
.iblai/iblai/templates/agent/lib/: config.ts.j2
.iblai/iblai/templates/base/: .env.example.j2  next.config.mjs.j2  next.config.ts.j2  package.json.j2
.iblai/iblai/templates/base/lib/: config.ts.j2
.iblai/iblai/templates/base/providers/: index.tsx.j2
.iblai/iblai/templates/shared/: CLAUDE.md.j2
.iblai/iblai/templates/shared/app/: layout.tsx.j2
.iblai/iblai/templates/shared/e2e/: .env.development.j2  custom-reporter.ts.j2
.iblai/iblai/templates/shared/lib/: utils.ts.j2
.iblai/iblai/templates/shared/lib/iblai/: tauri-stub.js
.iblai/iblai/templates/skills/: README.md
.iblai/iblai/templates/skills/builds/: iblai-generate-icons.md
.iblai/iblai/templates/skills/code-quality/iblai-deslop/: iblai-deslop.md
.iblai/iblai/templates/skills/components/: iblai-add-account.md  iblai-add-auth.md  iblai-add-chat.md  iblai-add-component.md  iblai-add-profile-page.md  iblai-add-profile.md  iblai-add-shadcn-component.md  iblai-customize-chat.md
.iblai/iblai/templates/skills/setup/: iblai-setup.md
.iblai/iblai/templates/skills/testing/: iblai-add-test.md
.iblai/iblai/templates/tauri/src-tauri/: Cargo.toml.j2  tauri.android.conf.json  tauri.conf.json.j2  tauri.ios.conf.json
.iblai/iblai/templates/tauri/src-tauri/capabilities/: default.json.j2
.iblai/iblai/templates/tauri/src-tauri/dev-fe/: index.html  setup-android.js
.iblai/iblai/templates/tauri/src-tauri/src/: lib.rs.j2
.iblai/npm/cli/: package.json
.iblai/npm/cli-darwin-arm64/: package.json
.iblai/npm/cli-linux-arm64/: package.json
.iblai/npm/cli-linux-x64/: package.json
.iblai/npm/cli-win32-arm64/: package.json
.iblai/npm/cli-win32-x64/: package.json
.iblai/scripts/: build-binary.ps1  build-binary.sh  generate-icons.sh  refresh-example.sh
.iblai/skills/commands/: iblai-cli-add-command.md  iblai-cli-builds.md  iblai-cli-startapp.md
.iblai/skills/internals/: iblai-cli-templates.md
.iblai/tests/: __init__.py  test_add_builds.py  test_add_generators.py  test_add_tauri.py  test_base_app_generator.py  test_builds_commands.py  test_cli.py  test_config.py  test_deploy.py  test_distribution.py  test_gallery.py  test_generators.py  test_next_config_patcher.py  test_package_manager.py  test_project_detector.py  test_tauri_commands.py  test_updater.py
docs/: build-deps-archlinux.md  build-deps-fedora.md  build-deps-macos.md  build-deps-windows.md
examples/iblai-agent-app/src-tauri/: AppxManifest.xml  Cargo.toml  build-msix.ps1  setup-test-cert.ps1  tauri.android.conf.json  tauri.conf.json
examples/iblai-agent-app/src-tauri/capabilities/: default.json
examples/iblai-agent-app/src-tauri/icons/: icon.icns
examples/iblai-agent-app/src-tauri/src/: lib.rs  main.rs
iblai_cli/: __init__.py  ai_helper.py  cli.py  config.py  next_config_patcher.py  package_manager.py  project_detector.py
scripts/: build-binary.ps1  build-binary.sh  refresh-example.sh
skills/: README.md
tests/: test_add_generators.py  test_add_tauri.py  test_ai_helper.py  test_base_app_generator.py  test_cli.py  test_config.py  test_distribution.py  test_generators.py  test_next_config_patcher.py  test_package_manager.py  test_project_detector.py  (+1 more)
(+277 files in other folders)
