[package]
name = "iblai_agent_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iblai-agent-app"
path = "src/main.rs"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }